<?xml version="1.0" encoding="utf-8"?>
<!--
fragment_about.xml
This file is for the AboutFragment.java
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@android:color/white">
    <!--
        Set to math_parent so the width will be full
        - and the bottom border won't be just for the word itself
    -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/about_title"
        android:textSize="30sp"
        android:id="@+id/about_title" />
    <!--
        SV - Scroll View
    -->
    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:weightSum="100"
        android:orientation="vertical">
        <ScrollView
            android:id="@+id/aboutSV"
            android:layout_height="0dp"
            android:layout_weight="60"
            android:layout_width="fill_parent"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp">
            <RelativeLayout
                android:id="@+id/innerScrollLayout"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:paddingBottom="50dp">
                <TextView
                    android:id="@+id/appAbout"
                    android:text="@string/APP_ABOUT"
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp"
                    android:scrollbars="vertical"
                    android:gravity="center" />
                <TextView
                    android:id="@+id/appAbout_email"
                    android:text="@string/app_email"
                    android:textSize="20sp"
                    android:textColor="#0037FF"
                    android:fontFamily="casual"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/appAbout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/appAbout_emailInstructions"
                    android:text="@string/emailInstructions"
                    android:textSize="15sp"
                    android:textColor="#7E7E7E"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/appAbout_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RelativeLayout>
        </ScrollView>
        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:textSize="20sp"
            android:textStyle="italic"
            android:text="@string/languageAvailable" />
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:layout_weight="10"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:layout_gravity="center">
            <ImageView
                android:id="@+id/uk"
                android:contentDescription="@string/nemo"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintHeight_default="percent"
                app:layout_constraintWidth_default="percent"
                app:layout_constraintHeight_percent="1"
                app:layout_constraintWidth_percent="0.10"

                app:layout_constraintBottom_toTopOf="parent"
                app:layout_constraintTop_toBottomOf="parent"
                app:layout_constraintRight_toLeftOf="@id/il_uk"
                app:srcCompat="@drawable/united_kingdom" />
            <TextView
                android:id="@+id/il_uk"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@color/white"
                app:layout_constraintHeight_default="percent"
                app:layout_constraintWidth_default="percent"
                app:layout_constraintHeight_percent="1"
                app:layout_constraintWidth_percent="0.1"

                app:layout_constraintBottom_toTopOf="parent"
                app:layout_constraintTop_toBottomOf="parent"
                app:layout_constraintRight_toLeftOf="@id/il"/>
            <ImageView
                android:id="@+id/il"
                android:contentDescription="@string/nemo"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintHeight_default="percent"
                app:layout_constraintWidth_default="percent"
                app:layout_constraintHeight_percent="1"
                app:layout_constraintWidth_percent="0.10"

                app:layout_constraintBottom_toTopOf="parent"
                app:layout_constraintTop_toBottomOf="parent"
                app:layout_constraintRight_toLeftOf="@id/uk_ge"
                app:srcCompat="@drawable/israel" />
            <TextView
                android:id="@+id/uk_ge"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@color/white"
                app:layout_constraintHeight_default="percent"
                app:layout_constraintWidth_default="percent"
                app:layout_constraintHeight_percent="1"
                app:layout_constraintWidth_percent="0.1"

                app:layout_constraintBottom_toTopOf="parent"
                app:layout_constraintTop_toBottomOf="parent"
                app:layout_constraintRight_toLeftOf="@id/germany"/>
            <ImageView
                android:id="@+id/germany"
                android:contentDescription="@string/nemo"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintHeight_default="percent"
                app:layout_constraintWidth_default="percent"
                app:layout_constraintHeight_percent="1"
                app:layout_constraintWidth_percent="0.10"

                app:layout_constraintBottom_toTopOf="parent"
                app:layout_constraintTop_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:srcCompat="@drawable/germany" />
            <TextView
                android:id="@+id/ge_fi"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@color/white"
                app:layout_constraintHeight_default="percent"
                app:layout_constraintWidth_default="percent"
                app:layout_constraintHeight_percent="1"
                app:layout_constraintWidth_percent="0.1"

                app:layout_constraintBottom_toTopOf="parent"
                app:layout_constraintTop_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/germany"/>
            <ImageView
                android:id="@+id/finland"
                android:contentDescription="@string/nemo"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintHeight_default="percent"
                app:layout_constraintWidth_default="percent"
                app:layout_constraintHeight_percent="1"
                app:layout_constraintWidth_percent="0.10"

                app:layout_constraintBottom_toTopOf="parent"
                app:layout_constraintTop_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/ge_fi"
                app:srcCompat="@drawable/finland" />
            <TextView
                android:id="@+id/fi_no"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@color/white"
                app:layout_constraintHeight_default="percent"
                app:layout_constraintWidth_default="percent"
                app:layout_constraintHeight_percent="1"
                app:layout_constraintWidth_percent="0.1"

                app:layout_constraintBottom_toTopOf="parent"
                app:layout_constraintTop_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/finland"/>
            <ImageView
                android:id="@+id/norway"
                android:contentDescription="@string/nemo"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintHeight_default="percent"
                app:layout_constraintWidth_default="percent"
                app:layout_constraintHeight_percent="1"
                app:layout_constraintWidth_percent="0.10"

                app:layout_constraintBottom_toTopOf="parent"
                app:layout_constraintTop_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/fi_no"
                app:srcCompat="@drawable/norway" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    <include layout="@layout/bottom_credits" />
</RelativeLayout>